[package]
name = "tesla-client"
version = "0.1.0"
authors = ["Camille Baronnet <git@camillebaronnet.fr>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
rpassword = "4.0"
serde_json = "1.0.44"
dirs = "2.0"
prettytable-rs = "0.8.0"
